--- a/src/app/(main)/cafedromedario/style.css
+++ b/src/app/(main)/cafedromedario/style.css
@@ -12,7 +12,17 @@
     transition: width 0.5s ease, opacity 0.5s ease; /* Transición aplicada */
 }
 
-.image:hover {
+.section .image:hover {
+    width: 245px; /* Cambiar el ancho al pasar el mouse */
+    opacity: 1;   /* Cambiar la opacidad */
+}
+
+.sectionTec{
+    display: flex;
+    width: 500px;
+    height: 430px; 
+}
+.sectionTec .image:hover {
     width: 245px; /* Cambiar el ancho al pasar el mouse */
     opacity: 1;   /* Cambiar la opacidad */
 }
