--- a/src/app/(session)/globals.css
+++ b/src/app/(session)/globals.css
@@ -10,7 +10,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #ffffff;
+    --background: #171717;
     --foreground: #ededed;
 
   }
