--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -12,15 +12,38 @@
   :root {
     --background: #ffffff;
     --foreground: #ededed;
-
   }
 }
 
 body {
-  color: rgb(255, 255, 255);
-  background: #BCC3CA;
+  background: #BCC3CA; /* Mantén el fondo original */
   font-family: Arial, Helvetica, sans-serif;
-  
+}
+
+/* Estilo por defecto para el scrollbar */
+::-webkit-scrollbar {
+  width: 12px; /* Ancho del scrollbar */
+  height: 12px; /* Altura del scrollbar horizontal */
+}
+
+/* Estilo por defecto del scrollbar sin clase específica */
+body.pageNO-specific::-webkit-scrollbar-thumb {
+  background-color: #3984C8; /* Color del scrollbar igual al fondo */
+  border-radius: 10px;
+}
+
+body:not(.page-specific)::-webkit-scrollbar-thumb:hover {
+  background-color: #21486C; /* Mismo color al pasar el mouse */
+}
+
+/* Estilo para el scrollbar en la página específica */
+body.page-specific::-webkit-scrollbar-thumb {
+  background-color: #E65C00; /* Color rojo para el pulgar del scrollbar */
+  border-radius: 10px;
+}
+
+body.page-specific::-webkit-scrollbar-thumb:hover {
+  background-color: #e5533e; /* Color más oscuro al pasar el mouse */
 }
 
 @layer utilities {
