--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -16,7 +16,8 @@
 }
 
 body {
-  background: #BCC3CA; /* Mantén el fondo original */
+  color: rgb(255, 255, 255);
+  background: #BCC3CA;
   font-family: Arial, Helvetica, sans-serif;
 }
 
