--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -47,6 +47,37 @@ body.page-specific::-webkit-scrollbar-thumb:hover {
   background-color: #e5533e; /* Color más oscuro al pasar el mouse */
 }
 
+/* Estilo para el hover de Ropa */
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.6s cubic-bezier(0.4,0.2,0.2,1);
+  transform-style: preserve-3d;
+}
+
+.group:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  top: 0;
+  left: 0;
+}
+
+.flip-card-front {
+  z-index: 2;
+}
+
+.flip-card-back {
+  transform: rotateY(180deg);
+  z-index: 1;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
