--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -23,33 +23,40 @@ body {
 
 /* Estilo por defecto para el scrollbar */
 ::-webkit-scrollbar {
-  width: 12px; /* Ancho del scrollbar */
-  height: 12px; /* Altura del scrollbar horizontal */
+  width: 12px;
+  /* Ancho del scrollbar */
+  height: 12px;
+  /* Altura del scrollbar horizontal */
 }
 
 /* Estilo por defecto del scrollbar sin clase específica */
 body.pageNO-specific::-webkit-scrollbar-thumb {
-  background-color: #3984C8; /* Color del scrollbar igual al fondo */
+  background-color: #3984C8;
+  /* Color del scrollbar igual al fondo */
   border-radius: 10px;
 }
 
 body:not(.page-specific)::-webkit-scrollbar-thumb:active {
-  background-color: #21486C; /* Mismo color al pasar el mouse */
+  background-color: #21486C;
+  /* Mismo color al pasar el mouse */
 }
 
 /* Fondo más oscuro para el scrollbar */
 ::-webkit-scrollbar-track {
-  background-color:  #3d3d3d; /* Fondo gris oscuro */
+  background-color: #3d3d3d;
+  /* Fondo gris oscuro */
 }
 
 /* Estilo para el scrollbar en la página específica */
 body.page-specific::-webkit-scrollbar-thumb {
-  background-color: #FF7D01; /* Color rojo para el pulgar del scrollbar */
+  background-color: #FF7D01;
+  /* Color rojo para el pulgar del scrollbar */
   border-radius: 10px;
 }
 
 body.page-specific::-webkit-scrollbar-thumb:active {
-  background-color: #E65C00; /* Color más oscuro al hacer clic */
+  background-color: #E65C00;
+  /* Color más oscuro al hacer clic */
 }
 
 /* Estilo para el hover de Ropa */
@@ -57,7 +64,7 @@ body.page-specific::-webkit-scrollbar-thumb:active {
   position: relative;
   width: 100%;
   height: 100%;
-  transition: transform 0.6s cubic-bezier(0.4,0.2,0.2,1);
+  transition: transform 0.6s cubic-bezier(0.4, 0.2, 0.2, 1);
   transform-style: preserve-3d;
 }
 
@@ -65,7 +72,8 @@ body.page-specific::-webkit-scrollbar-thumb:active {
   transform: rotateY(180deg);
 }
 
-.flip-card-front, .flip-card-back {
+.flip-card-front,
+.flip-card-back {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -87,4 +95,87 @@ body.page-specific::-webkit-scrollbar-thumb:active {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes slideUp {
+  from {
+    transform: translateY(40px);
+    opacity: 0;
+  }
+
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.animate-fade-in {
+  animation: fadeIn 0.2s;
+}
+
+.animate-slide-up {
+  animation: slideUp 0.3s;
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes slideDown {
+  from {
+    transform: translateY(0);
+    opacity: 1;
+  }
+
+  to {
+    transform: translateY(40px);
+    opacity: 0;
+  }
+}
+
+.animate-fade-out {
+  animation: fadeOut 0.2s forwards;
+}
+
+.animate-slide-down {
+  animation: slideDown 0.3s forwards;
+}
+
+/* Scrollbar personalizado solo para la página de carreras */
+body.scrollbar-carreras ::-webkit-scrollbar-thumb {
+  background: rgb(243 244 246);
+  border-radius: 12px;
+}
+body.scrollbar-carreras ::-webkit-scrollbar-thumb:hover {
+  background: rgb(218, 218, 219);
+  /* Color del scrollbar igual al fondo */
+}
+body.scrollbar-carreras ::-webkit-scrollbar-thumb:active {
+  background: rgb(145, 145, 146);
+  /* Mismo color al pasar el mouse */
+}
+
+body.scrollbar-carreras ::-webkit-scrollbar-track {
+  background: transparent; /* transparente */
+  border-radius: 12px;
+}
+
+body.scrollbar-carreras ::-webkit-calendar-picker-indicator {
+  filter: invert(1);
 }
