--- a/src/app/[locale]/(session)/globals.css
+++ b/src/app/[locale]/(session)/globals.css
@@ -20,12 +20,16 @@ body {
   color: rgb(255, 255, 255);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
-  
+
 }
-h1, h2, h3 {
+
+h1,
+h2,
+h3 {
   font-family: var(--font-geist-sans);
-  font-weight: 700; 
+  font-weight: 700;
 }
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
