--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -17,7 +17,7 @@
 
 body {
   color: rgb(255, 255, 255);
-  background: #BCC3CA;
+  background: #aca6a6;
   font-family: Arial, Helvetica, sans-serif;
 }
 
