Refactor table imports and enhance UI components
- Updated imports for Table component in Runners.tsx and Usuarios.tsx to use the new path.
- Modified NavBarS.tsx to improve rendering logic and added hover effects for menu items.
- Enhanced NewsSelector component by removing unused props and improving styling.
- Refactored Dropdown component to improve toggle functionality and UI responsiveness.
- Added a new Table component with enhanced features for displaying data, including action buttons and state indicators.
- Introduced a new SVG icon for the dashboard panel.
- Updated global CSS to include a new filter class for styling.

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -187,3 +187,7 @@ body.scrollbar-carreras ::-webkit-inner-spin-button {
   -moz-appearance: textfield;
   margin: 0;
 }
+
+.filter-blue-300 {
+  filter: invert(61%) sepia(98%) saturate(748%) hue-rotate(176deg) brightness(97%) contrast(92%);
+}
